# sortiz

./: .SRCINFO  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PKGBUILD  README.md  config.example.toml
src/: app.rs  audio.rs  config.rs  main.rs  ui.rs
src/algorithms/: bitonic.rs  bogo.rs  bubble.rs  cocktail.rs  comb.rs  cycle.rs  gnome.rs  heap.rs  insertion.rs  intro.rs  merge.rs  mod.rs  pancake.rs  quick.rs  radix.rs  roulette.rs  selection.rs  shell.rs  sleep.rs  stalin.rs  tim.rs
themes/: catppuccin-mocha.toml  gruvbox-dark.toml  nord.toml
