[package]
name = "sortiz"
version = "0.1.0"
edition = "2021"
description = "A TUI sorting algorithm visualizer with smooth animations and full theme support"
license = "MIT"
repository = "https://github.com/PR0M4XIMUS/sortiz"
homepage = "https://github.com/PR0M4XIMUS/sortiz"
keywords = ["tui", "sorting", "visualizer", "terminal", "algorithm"]
categories = ["command-line-utilities", "visualization"]

[[bin]]
name = "sortiz"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rand = "0.8"
dirs = "5"
anyhow = "1"

[profile.release]
opt-level = 2
codegen-units = 1
